Fixed overflow-x on main-content if the side navigation-bar is active

--- a/laravel/public/assets/css/elements/navigationbar.css
+++ b/laravel/public/assets/css/elements/navigationbar.css
@@ -4,6 +4,7 @@
 {
 	.main-content
 	{
+		overflow-x: hidden;
 		padding-left: 290px;
 	}
 	
